--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Devops
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               "Linux Devops"
+tagline:             'A Kind of life'
+description:         'All my ramblings mainly about Linux and Devops'
+url:                 https://abacao.github.io
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
+  name:              André Bação
   url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  email:             email@bacao.pt
 
 # Custom vars
 version:             1.0.0
