--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-#relative_permalinks: true
+relative_permalinks: true
 
 # Setup
 title:               "Linux Devops"
@@ -15,7 +15,6 @@ paginate:            5
 # About/contact
 author:
   name:              André Bação
-  #url:               https://twitter.com/mdo
   email:             email@bacao.pt
 
 # Custom vars
