--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ relative_permalinks: true
 
 # Setup
 title:               "Linux Devops"
-tagline:             'A kind of life'
+tagline:             'a kind of life'
 description:         'All my ramblings mainly about Linux and Devops'
 url:                 https://abacao.github.io
 baseurl:             'https://github.com/abacao/abacao.github.io'
