--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:           pretty
 
 # Setup
 title:               "Linux Devops"
-tagline:             'a kind of life'
+tagline:             'aa kind of life'
 description:         'All my ramblings mainly about Linux and Devops'
 url:                 https://abacao.github.io
 baseurl:             ''
