--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               "Linux Devops"
 tagline:             'a kind of life'
 description:         'All my ramblings mainly about Linux and Devops'
 url:                 https://abacao.github.io
-baseurl:             'https://github.com/abacao/abacao.github.io'
+baseurl:             'https://abacao.github.io'
 paginate:            5
 
 # About/contact
@@ -18,4 +18,4 @@ author:
   email:             email@bacao.pt
 
 # Custom vars
-version:             1.0.0
+version:             1.0.1
