--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ plugins:
 title:               "Linux Devops"
 tagline:             'a kind of life'
 description:         'All my ramblings mainly about Linux and Devops'
-url:                 https://abacao.github.io
-baseurl:             'https://abacao.github.io'
+url:                 http://abacao.github.io
+baseurl:             'http://abacao.github.io'
 paginate:            5
 google_analytics:    'UA-97265376-1'
 
