--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ plugins:
 
 # Setup
 title:               "Linux DevOps"
-tagline:             'a kind of life'
-description:         'All my ramblings mainly about Linux and DevOps'
+tagline:             'Automate Everything'
+description:         'All my ramblings mainly about me, Linux and DevOps'
 url:                 http://abacao.github.io
 baseurl:             'http://abacao.github.io'
 paginate:            5
@@ -21,4 +21,4 @@ author:
   email:             email@bacao.pt
 
 # Custom vars
-version:             1.0.8
+version:             1.0.9
