--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,12 @@ baseurl:             ''
 paginate:            5
 google_analytics:    'UA-97265376-1'
 
-markdown: redcarpet
+kramdown:
+  syntax_highlighter: rouge
+  input: GFM
+  auto_ids:       true
+  toc_levels:     1..3
+
 
 # About/contact
 author:
